<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroupTipoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RadioGroup>

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="137dp"
        android:hint="@string/usuario"
        app:layout_constraintBottom_toBottomOf="@+id/etData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLoja"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="63dp"
        android:hint="@string/loja"
        app:layout_constraintBottom_toBottomOf="@+id/etData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etUsuario" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/data"
        app:layout_constraintBottom_toTopOf="@+id/etItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etItem"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:hint="@string/itemOuPedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirPedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etItem" />

    <Button
        android:id="@+id/btnInserirPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="184dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spinnerStatus" />

    <Button
        android:id="@+id/btnVoltarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:text="@string/voltar"
        app:layout_constraintEnd_toEndOf="@+id/spinnerStatus"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStatus" />

    <RadioButton
        android:id="@+id/radioItem"
        android:layout_width="98dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:text="@string/itemPedido"
        app:layout_constraintEnd_toStartOf="@+id/radioAlimento"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioAlimento"
        android:layout_width="108dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:text="@string/alimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>